--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -1,8 +1,44 @@
-header {
-  width: 50%;
-  background: brown;
+@use "sass:map";
+@use "sass:string";
 
-  &.w-100 {
-    width: 100%;
+$theme-colors: (
+  "primary": (
+    "light": "#f5e6e8",
+    "dark": "#1b262c",
+  ),
+  "secondary": (
+    "light": "#d5c6e0",
+    "dark": "#0f4c75",
+  ),
+  "success": (
+    "light": "#aaa1c8",
+    "dark": "#3282b8",
+  ),
+  "info": (
+    "light": "#967aa1",
+    "dark": "#f9f9f9",
+  ),
+  "warning": (
+    "light": "#192a51",
+    "dark": "#bbe1fa",
+  ),
+);
+
+// BEGIN (write your solution here)
+@mixin colors($color-name, $tone: light) {
+  @each $color-name, $tone in $colors {
+    .bg-#{$color-name} {
+      background: map.get($theme-colors, "light");
+    }
+    .bg-#{$color-name} {
+      background: map.get($theme-colors, "dark");
+    }
+    .text-#{$color-name} {
+      color: map.get($theme-colors, "light");
+    }
+    .text-#{$color-name} {
+      color: map.get($theme-colors, "dark");
+    }
   }
+  @include colors($color-name, $tone);
 }
